--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  -moz-scroll-behavior: smooth;
 }
 
 .heading {
@@ -616,7 +617,7 @@ html {
 }
 
 .shop {
-  min-height: 100vh;
+  max-height: 100vh;
   width: 100%;
   background: rgb(177, 209, 228);
   font-family: sans-serif;
@@ -625,6 +626,54 @@ html {
   flex-direction: column;
   align-items: center;
   background-color: rgb(73, 72, 72);
+}
+.shop .shopBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10vmin;
+  overflow: hidden;
+}
+.shop .shopBox .card {
+  flex: 1;
+  transition: all 1s ease-in-out;
+  height: 65vmin;
+  position: relative;
+}
+.shop .shopBox .card .card__head {
+  color: black;
+  padding: 0.5em;
+  transition: transform 0.5s linear;
+  min-width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: -3rem;
+  font-size: 2rem;
+  white-space: nowrap;
+}
+.shop .shopBox .card:hover {
+  flex-grow: 5;
+}
+.shop .shopBox .card:hover img {
+  filter: grayscale(0%);
+}
+.shop .shopBox .card:hover .card__head {
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.7);
+  font-size: 2rem;
+  transform: translateY(-4rem);
+}
+.shop .shopBox .card img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 1s ease-in-out;
+  filter: grayscale(100%);
+}
+.shop .shopBox .card:not(:nth-child(5)) {
+  margin-right: 1rem;
 }
 .shop .signBox {
   width: 100%;
@@ -646,54 +695,6 @@ html {
 }
 .shop .sign img:hover {
   transform: scale(1.3);
-}
-.shop .shopBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 10vmin;
-  overflow: hidden;
-}
-.shop .shopBox .card {
-  flex: 1;
-  transition: all 1s ease-in-out;
-  height: 70vmin;
-  position: relative;
-}
-.shop .shopBox .card .card__head {
-  color: black;
-  padding: 0.5em;
-  transition: transform 0.5s linear;
-  min-width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: -6rem;
-  font-size: 2rem;
-  white-space: nowrap;
-}
-.shop .shopBox .card:hover {
-  flex-grow: 5;
-}
-.shop .shopBox .card:hover img {
-  filter: grayscale(0%);
-}
-.shop .shopBox .card:hover .card__head {
-  text-align: center;
-  color: white;
-  background: rgba(0, 0, 0, 0.7);
-  font-size: 2rem;
-  transform: translateY(-6rem);
-}
-.shop .shopBox .card img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition: all 1s ease-in-out;
-  filter: grayscale(100%);
-}
-.shop .shopBox .card:not(:nth-child(5)) {
-  margin-right: 1rem;
 }
 
 .opinion {
@@ -1044,6 +1045,7 @@ html {
 @media (max-width: 991px) {
   .contactUs {
     padding: 20px;
+    height: auto;
   }
   .contactUs__box {
     grid-template-columns: 1fr;
