--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ $color-brand-1: red;
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
+	-moz-scroll-behavior: smooth;
 }
 
 .heading {
@@ -248,7 +249,6 @@ html {
 	transform: translate(65%, -1.6rem) rotate(35deg);
 }
 // End of MENU
-
 
 // Home
 
@@ -637,7 +637,7 @@ html {
 // Shop
 
 .shop {
-	min-height: 100vh;
+	max-height: 100vh;
 	width: 100%;
 	background: rgb(177, 209, 228);
 	font-family: sans-serif;
@@ -646,6 +646,58 @@ html {
 	flex-direction: column;
 	align-items: center;
 	background-color: rgb(73, 72, 72);
+
+	.shopBox {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 10vmin;
+		overflow: hidden;
+
+		.card {
+			flex: 1;
+			transition: all 1s ease-in-out;
+			height: 65vmin;
+			position: relative;
+
+			.card__head {
+				color: black;
+				padding: 0.5em;
+				transition: transform 0.5s linear;
+				min-width: 100%;
+				text-align: center;
+				position: absolute;
+				bottom: -3rem;
+				font-size: 2rem;
+				white-space: nowrap;
+			}
+
+			&:hover {
+				flex-grow: 5;
+				img {
+					filter: grayscale(0%);
+				}
+
+				.card__head {
+					text-align: center;
+					color: white;
+					background: rgba(0, 0, 0, 0.7);
+					font-size: 2rem;
+					transform: translateY(-4rem);
+				}
+			}
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				transition: all 1s ease-in-out;
+				filter: grayscale(100%);
+			}
+			&:not(:nth-child(5)) {
+				margin-right: 1rem;
+			}
+		}
+	}
 
 	.signBox {
 		width: 100%;
@@ -667,57 +719,6 @@ html {
 			transition: all 0.3s;
 			&:hover {
 				transform: scale(1.3);
-			}
-		}
-	}
-
-	.shopBox {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin: 0 10vmin;
-		overflow: hidden;
-
-		.card {
-			flex: 1;
-			transition: all 1s ease-in-out;
-			height: 70vmin;
-			position: relative;
-		
-			.card__head {
-				color: black;
-				padding: 0.5em;
-				transition: transform 0.5s linear;
-				min-width: 100%;
-				text-align: center;
-				position: absolute;
-				bottom: -6rem;
-				font-size: 2rem;
-				white-space: nowrap;
-			}
-
-			&:hover {
-				flex-grow: 5;
-				img {
-					filter: grayscale(0%);
-				}
-				.card__head {
-					text-align: center;
-					color: white;
-					background: rgba(0, 0, 0, 0.7);
-					font-size: 2rem;
-					transform: translateY(-6rem);
-				}
-			}
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				transition: all 1s ease-in-out;
-				filter: grayscale(100%);
-			}
-			&:not(:nth-child(5)) {
-				margin-right: 1rem;
 			}
 		}
 	}
@@ -1108,10 +1109,10 @@ html {
 	}
 }
 
-
 @media (max-width: 991px) {
 	.contactUs {
 		padding: 20px;
+		height: auto;
 	}
 
 	.contactUs__box {
@@ -1138,7 +1139,6 @@ html {
 		min-height: 300px;
 	}
 }
-
 
 @media (max-width: 900px) {
 	html {
