--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
   -moz-scroll-behavior: smooth; }
 
 .heading {
-  font-family: 'Audiowide', cursive;
+  font-family: 'Oswald', sans-serif;
   font-size: 5rem;
   font-weight: 400;
   color: red;
@@ -25,29 +25,35 @@ html {
   color: #fff;
   margin: 10rem 0 5rem 0; }
 
-@media (max-width: 1650px) {
+@media (min-width: 2000px) {
   html {
-    font-size: 57%; } }
+    font-size: 62.5%; } }
 
-@media (max-width: 1400px) {
+@media (max-width: 1680px) {
+  html {
+    font-size: 60.5%; } }
+
+@media (max-width: 1440px) {
   html {
     font-size: 50%; } }
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
   .heading {
-    margin-top: 5rem; } }
+    margin-top: 10rem; } }
 
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   html {
-    font-size: 45%; } }
+    font-size: 45%; }
+  .heading {
+    margin: 12rem 0 5rem 0; } }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   html {
     font-size: 40%; } }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   html {
-    font-size: 32%; } }
+    font-size: 35%; } }
 
 .navbar {
   width: 100%;
@@ -118,22 +124,36 @@ html {
     rotate: 360deg; } }
   .navbar__logo {
     position: absolute;
-    top: 0.5rem;
+    top: 2.5rem;
     left: 3rem; }
     .navbar__logo p {
-      font-family: 'Lato', sans-serif;
+      font-family: 'HELLO DENVER DISPLAY';
       font-size: 3.5rem;
-      color: yellow;
-      font-weight: 900;
+      color: #fff;
       letter-spacing: 0.3rem;
       text-transform: uppercase;
-      text-align: center; }
+      text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff, 0 0 4.2rem #0fa, 0 0 8.2rem #0fa, 0 0 9.2rem #0fa, 0 0 10.2rem #0fa, 0 0 15.1rem #0fa;
+      animation: flicker 1.5s infinite alternate; }
+
+@keyframes flicker {
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow: 0 0 0.4rem #fff, 0 0 1.1rem #fff, 0 0 1.9rem #fff, 0 0 4rem #0fa, 0 0 8rem #0fa, 0 0 9rem #0fa, 0 0 10rem #0fa, 0 0 15rem #0fa; }
+  20%,
+  24%,
+  55% {
+    text-shadow: none; } }
     .navbar__logo span {
-      font-family: 'Lato', sans-serif;
-      display: inline-block;
+      font-family: 'Oswald', sans-serif;
       font-size: 3.5rem;
-      font-weight: 900;
-      color: red; }
+      font-weight: 500;
+      color: red;
+      text-shadow: none; }
   .navbar.change {
     height: 100vh; }
   .navbar__list {
@@ -170,6 +190,20 @@ html {
   opacity: 1;
   visibility: visible;
   transition: all 0.6s 0.4s; }
+
+@media (max-width: 420px) {
+  .navbar__logo {
+    top: 3.5rem; }
+    .navbar__logo p {
+      font-size: 2.2rem; }
+    .navbar__logo span {
+      font-size: 2.2rem; } }
+
+@media (max-width: 320px) {
+  .navbar__logo p {
+    font-size: 1.8rem; }
+  .navbar__logo span {
+    font-size: 1.8rem; } }
 
 .menu {
   width: 4rem;
@@ -330,12 +364,9 @@ html {
     .home__banner-btn:hover::before {
       left: 100%; }
 
-@media (max-width: 1400px) {
-  .home__banner-heading span {
-    font-size: 10rem; }
+@media (max-width: 1440px) {
   .home__banner-paragraph {
-    width: 45rem;
-    font-size: 3rem; } }
+    width: 50rem; } }
 
 @media (max-width: 900px) {
   .home__banner {
@@ -343,36 +374,24 @@ html {
   .home__banner-heading span {
     font-size: 10rem; } }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .home__banner-heading span {
-    font-size: 8rem;
-    letter-spacing: 1.5rem; }
-  @keyframes animateHeading {
-    0% {
-      transform: translateZ(10rem);
-      opacity: 0;
-      letter-spacing: 1.5rem; }
-    5% {
-      transform: translateZ(0rem);
-      opacity: 1;
-      letter-spacing: 1rem; }
-    25% {
-      transform: translateZ(0rem);
-      opacity: 1;
-      letter-spacing: 1rem; }
-    30% {
-      transform: translateZ(10rem);
-      opacity: 0;
-      letter-spacing: 1.5rem; }
-    100% {
-      transform: translateZ(10rem);
-      opacity: 0;
-      letter-spacing: 1.5rem; } } }
+    font-size: 10rem;
+    letter-spacing: 1.5rem; } }
 
-@media (max-width: 550px) {
+@media (max-width: 420px) {
   .home__banner-heading span {
-    font-size: 4.5rem;
-    letter-spacing: 1rem; } }
+    font-size: 8rem; }
+  .home__banner-paragraph {
+    width: 48rem;
+    font-size: 4rem; } }
+
+@media (max-width: 320px) {
+  .home__banner-heading span {
+    font-size: 5rem; }
+  .home__banner-paragraph {
+    width: 37rem;
+    font-size: 3rem; } }
 
 .aboutUs {
   width: 100%;
@@ -380,6 +399,7 @@ html {
   background-color: #222020;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   flex-direction: column;
   position: relative; }
   .aboutUs__box {
@@ -387,9 +407,10 @@ html {
     padding: 0rem 10rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     column-gap: 10rem; }
   .aboutUs__paragraph {
-    width: 60rem;
+    width: 40%;
     font-size: 2rem;
     color: #fff;
     padding: 2rem 0 2rem 0; }
@@ -411,26 +432,88 @@ html {
       font-size: 2.5rem;
       text-align: center; }
   .aboutUs__wrapper {
-    width: 115rem;
-    height: 68vh;
+    width: 60%;
+    height: 100%;
     overflow: hidden;
     position: relative; }
   .aboutUs__slide {
     position: absolute;
     width: 100%;
-    height: 100%;
-    transition: opacity 1.5s; }
+    transition: opacity 1.5s;
+    margin: 4rem 0; }
   .aboutUs__slide img {
     width: 100%;
     background-position: center;
     object-fit: cover;
     box-shadow: 0.2rem 0.2rem 2rem rgba(0, 0, 0, 0.5); }
 
+@media (min-width: 2000px) {
+  .aboutUs {
+    justify-content: space-around; }
+    .aboutUs__wrapper {
+      height: 65vh; } }
+
+@media (max-width: 1680px) {
+  .aboutUs {
+    height: 100vh;
+    justify-content: flex-start; }
+    .aboutUs__paragraph {
+      font-size: 1.8rem; }
+    .aboutUs__wrapper {
+      height: 55vh; } }
+
+@media (max-width: 1280px) {
+  .aboutUs {
+    height: 90vh; }
+    .aboutUs__wrapper {
+      height: 45vh; } }
+
+@media (max-width: 1024px) {
+  .aboutUs {
+    justify-content: flex-start;
+    height: 160vh; }
+    .aboutUs__box {
+      flex-direction: column; }
+    .aboutUs__paragraph {
+      width: 90%; }
+    .aboutUs__wrapper {
+      width: 80%;
+      height: 65vh; } }
+
+@media (max-width: 820px) {
+  .aboutUs {
+    height: 90vh; }
+    .aboutUs__wrapper {
+      height: 35vh; } }
+
+@media (max-width: 600px) {
+  .aboutUs {
+    height: 110vh; }
+    .aboutUs__wrapper {
+      height: 35vh;
+      width: 90%; } }
+
+@media (max-width: 420px) {
+  .aboutUs {
+    height: 120vh; }
+    .aboutUs__wrapper {
+      height: 25vh; } }
+
+@media (max-width: 320px) {
+  .aboutUs {
+    height: 170vh; }
+    .aboutUs__paragraph {
+      width: 100%; }
+    .aboutUs__wrapper {
+      width: 100%;
+      height: 30vh; } }
+
 .section__offer {
   width: 100%;
   height: 100vh;
-  display: grid;
-  place-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   position: relative; }
 
 .offer-bcg {
@@ -444,14 +527,13 @@ html {
   opacity: 0.2; }
 
 .offer {
-  max-width: 170rem;
-  height: 65rem;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center; }
   .offer .contentBox {
     position: relative;
-    width: 38rem;
+    width: 40rem;
     margin: 1rem 2rem; }
     .offer .contentBox .label {
       height: 25rem;
@@ -479,7 +561,7 @@ html {
       border-bottom-left-radius: 2rem;
       border-bottom-right-radius: 2rem; }
     .offer .contentBox.active .content {
-      height: 40rem;
+      min-height: calc(75vh - 30rem);
       padding: 1rem 1rem; }
   .offer .contentBox-1 .label {
     background: url(".././images/mechanika.jpg") no-repeat;
@@ -489,7 +571,7 @@ html {
   .offer .contentBox-1 .content {
     background: #70d1ee; }
   .offer .contentBox-2 .label {
-    background: url(".././images/motor.jpg") no-repeat;
+    background: url(".././images/klimatyzacja.jpg") no-repeat;
     background-size: cover; }
     .offer .contentBox-2 .label h3 {
       background-image: linear-gradient(to right, #946809, #bdba0e); }
@@ -503,12 +585,36 @@ html {
   .offer .contentBox-3 .content {
     background: rgba(226, 142, 142, 0.9); }
   .offer .contentBox-4 .label {
-    background: url(".././images/road-mountain.jpg") no-repeat;
+    background: url(".././images/diagnostyka.jpg") no-repeat;
     background-size: cover; }
     .offer .contentBox-4 .label h3 {
       background-image: linear-gradient(to right, #0b7e48, #3be286); }
   .offer .contentBox-4 .content {
     background: rgba(133, 226, 175, 0.9); }
+
+@media (max-width: 1800px) {
+  .section__offer {
+    height: 180vh; }
+  .offer {
+    height: 100vh; }
+    .offer .contentBox {
+      width: 64rem; } }
+
+@media (max-width: 900px) {
+  .section__offer {
+    height: 170vh; }
+  .offer .contentBox .label {
+    height: 35rem; }
+  .offer .contentBox.active .content {
+    min-height: calc(40vh - 40rem); } }
+
+@media (max-width: 384px) {
+  .section__offer {
+    height: 200vh; }
+  .offer .contentBox .label {
+    height: 25rem; }
+  .offer .contentBox.active .content {
+    min-height: calc(50vh - 35rem); } }
 
 .shop {
   max-height: 100vh;
@@ -532,13 +638,13 @@ html {
       height: 65vmin;
       position: relative; }
       .shop .shopBox .card .card__head {
-        color: black;
+        opacity: 0;
         padding: 0.5em;
-        transition: transform 0.5s linear;
+        transition: transform 0.5s;
         min-width: 100%;
-        text-align: center;
+        text-align: start;
         position: absolute;
-        bottom: -3rem;
+        bottom: -4rem;
         font-size: 2rem;
         white-space: nowrap; }
       .shop .shopBox .card:hover {
@@ -546,11 +652,12 @@ html {
         .shop .shopBox .card:hover img {
           filter: grayscale(0%); }
         .shop .shopBox .card:hover .card__head {
+          opacity: 1;
           text-align: center;
           color: white;
           background: rgba(0, 0, 0, 0.7);
           font-size: 2rem;
-          transform: translateY(-4rem); }
+          transform: translateY(-8rem); }
       .shop .shopBox .card img {
         width: 100%;
         height: 100%;
@@ -576,6 +683,32 @@ html {
       .shop .sign img:hover {
         transform: scale(1.3); }
 
+@media (max-width: 1680px) {
+  .shop .shopBox .card .card__head {
+    font-size: 1.8rem; }
+  .shop .shopBox .card:hover .card__head {
+    font-size: 1.8rem; } }
+
+@media (max-width: 1280px) {
+  .shop .shopBox .card .card__head {
+    font-size: 1.5rem; }
+  .shop .shopBox .card:hover .card__head {
+    font-size: 1.5rem; } }
+
+@media (max-width: 1024px) {
+  .shop .shopBox .card .card__head {
+    font-size: 1.2rem; }
+  .shop .shopBox {
+    margin: 0; }
+  .shop .sign {
+    padding: 0; }
+  .shop .shopBox .card:hover .card__head {
+    font-size: 1.2rem; } }
+
+@media (max-width: 420px) {
+  .shop .shopBox .card:hover .card__head {
+    opacity: 0; } }
+
 .opinion {
   width: 100%;
   height: 100vh;
@@ -591,7 +724,7 @@ html {
     background-position: center;
     background-size: cover;
     width: 45rem;
-    height: 65rem;
+    height: 63rem;
     border-radius: 1rem;
     box-shadow: 0 1.5rem 5rem rgba(0, 0, 0, 0.2);
     filter: blur(0.5rem) brightness(0.8);
@@ -601,12 +734,18 @@ html {
     padding: 4rem 4rem 2rem 4rem;
     width: 100%;
     font-size: 2rem; }
-  .opinion-paragraph i {
-    font-size: 3rem;
-    display: block;
-    color: #85d2f5; }
-  .opinion-paragraph .fa-quote-right {
-    text-align: right; }
+  .opinion-paragraph {
+    display: block; }
+    .opinion-paragraph .fa-quote-left {
+      font-size: 3rem;
+      display: block;
+      color: #85d2f5; }
+    .opinion-paragraph .fa-quote-right {
+      font-size: 3rem;
+      display: block;
+      color: #85d2f5;
+      text-align: center;
+      width: 190%; }
   .opinion-author {
     font-size: 2.5rem;
     text-align: right;
@@ -622,6 +761,14 @@ html {
     background-image: none; }
   .opinion .swiper-slide-active {
     filter: blur(0rem); }
+
+@media (max-width: 900px) {
+  .opinion {
+    height: 70vh; } }
+
+@media (max-width: 384px) {
+  .opinion {
+    height: 100vh; } }
 
 .contactUs {
   background-image: linear-gradient(to right, rgba(40, 96, 180, 0.3) 5%, rgba(255, 255, 255, 0.6)), url(.././images/road-mountain.jpg);
@@ -799,7 +946,50 @@ html {
   text-align: right;
   color: #fff; }
 
-@media (max-width: 991px) {
+@media (min-width: 2000px) {
+  .contactUs {
+    padding: 20px;
+    height: 100vh; }
+  .contactUs__box {
+    grid-template-rows: repeat(2, 48rem); }
+  .contactUs__row50 {
+    column-gap: 3rem; }
+  .contactUs__inputBox span {
+    font-size: 2.5rem;
+    margin: 3rem 0 1rem; }
+  .contactUs__inputBox input {
+    padding: 1.5rem;
+    font-size: 2.5rem; }
+  .contactUs__inputBox textarea {
+    font-size: 2.5rem;
+    min-height: 32rem;
+    margin-bottom: 3rem; }
+  .contactUs__info .contactUs__infoBox div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem; }
+  .contactUs__info .contactUs__infoBox div span {
+    min-width: 5rem;
+    height: 5rem;
+    font-size: 3rem;
+    margin-right: 2rem; }
+  .contactUs__info .contactUs__infoBox div p {
+    font-size: 2.2rem;
+    line-height: 3rem; }
+  .contactUs__info .contactUs__infoBox div a {
+    font-size: 2.2rem; }
+  .contactUs__hoursBox h3 {
+    margin-bottom: 2.8rem; }
+  .contactUs_hours-list {
+    font-size: 2.5rem; }
+  .contactUs_hours-list span {
+    text-align: right; } }
+
+@media (max-width: 1280px) {
+  .contactUs__info {
+    column-gap: 10rem; } }
+
+@media (max-width: 1024px) {
   .contactUs {
     padding: 20px;
     height: auto; }
@@ -812,11 +1002,31 @@ html {
     flex-direction: column; }
   .contactUs__inputBox {
     width: 100%; }
+  .contactUs__info {
+    column-gap: 40rem; }
   .contactUs__contact {
     padding: 30px; }
   .contactUs__map {
     padding: 0;
     min-height: 300px; } }
+
+@media (max-width: 900px) {
+  .contactUs__info {
+    column-gap: 30rem; } }
+
+@media (max-width: 820px) {
+  .contactUs {
+    height: auto; } }
+
+@media (max-width: 600px) {
+  .contactUs {
+    height: fit-content; }
+  .contactUs__info {
+    column-gap: 10rem; } }
+
+@media (max-width: 384px) {
+  .contactUs__info {
+    column-gap: 5rem; } }
 
 .footer {
   width: 100%;
@@ -860,7 +1070,7 @@ html {
     .footer-nav {
       font-size: 1.2rem; } }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .footer {
     flex-direction: column;
     justify-content: center; }
@@ -868,3 +1078,11 @@ html {
       margin-bottom: 2rem; }
       .footer__nav a {
         margin: 1rem; } }
+
+@media (max-width: 320px) {
+  .footer__nav a {
+    margin-right: 1.5rem;
+    font-size: 1.5rem; }
+    .footer__nav a::first-letter {
+      color: red;
+      font-size: 2rem; } }
