--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -89,15 +89,6 @@
 }
 
 @font-face {
-    font-family: 'Audiowide';
-    src: url('Audiowide-Regular.woff2') format('woff2'),
-        url('Audiowide-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
     font-family: 'Baloo Da 2';
     src: url('BalooDa2-Regular.woff2') format('woff2'),
         url('BalooDa2-Regular.woff') format('woff');
@@ -214,3 +205,29 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'HELLO DENVER DISPLAY';
+    src: url('HELLODENVERDISPLAYREGULAR-Regular.woff2') format('woff2'),
+        url('HELLODENVERDISPLAYREGULAR-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'HELLO DENVER DISPLAY BOLD';
+    src: url('HELLODENVERDISPLAYBOLD-Bold.woff2') format('woff2'),
+        url('HELLODENVERDISPLAYBOLD-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Icklips';
+    src: url('Icklips.woff2') format('woff2'),
+        url('Icklips.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
