--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,7 +23,7 @@ html {
 }
 
 .heading {
-	font-family: 'Audiowide', cursive;
+	font-family: 'Oswald', sans-serif;
 	font-size: 5rem;
 	font-weight: 400;
 	color: $color-brand-1;
@@ -39,38 +39,47 @@ html {
 
 // RESPONSIVE
 
-@media (max-width: 1650px) {
+@media (min-width: 2000px) {
 	html {
-		font-size: 57%;
+		font-size: 62.5%;
 	}
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1680px) {
+	html {
+		font-size: 60.5%;
+	}
+}
+
+@media (max-width: 1440px) {
 	html {
 		font-size: 50%;
 	}
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
 	.heading {
-		margin-top: 5rem;
+		margin-top: 10rem;
 	}
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
 	html {
 		font-size: 45%;
 	}
+	.heading {
+		margin: 12rem 0 5rem 0;
+	}
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
 	html {
 		font-size: 40%;
 	}
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
 	html {
-		font-size: 32%;
+		font-size: 35%;
 	}
 }
