--- a/sass/_contactUs.scss
+++ b/sass/_contactUs.scss
@@ -213,7 +213,77 @@
 
 // RESPONSIVE
 
-@media (max-width: 991px) {
+@media (min-width: 2000px) {
+	.contactUs {
+		padding: 20px;
+		height: 100vh;
+	}
+	.contactUs__box {
+		grid-template-rows: repeat(2, 48rem);
+	}
+
+	.contactUs__row50 {
+		column-gap: 3rem;
+	}
+
+	.contactUs__inputBox span {
+		font-size: 2.5rem;
+		margin: 3rem 0 1rem;
+	}
+
+	.contactUs__inputBox input {
+		padding: 1.5rem;
+		font-size: 2.5rem;
+	}
+
+	.contactUs__inputBox textarea {
+		font-size: 2.5rem;
+		min-height: 32rem;
+		margin-bottom: 3rem;
+	}
+
+	.contactUs__info .contactUs__infoBox div {
+		display: flex;
+		align-items: center;
+		margin-bottom: 3rem;
+	}
+
+	.contactUs__info .contactUs__infoBox div span {
+		min-width: 5rem;
+		height: 5rem;
+		font-size: 3rem;
+		margin-right: 2rem;
+	}
+
+	.contactUs__info .contactUs__infoBox div p {
+		font-size: 2.2rem;
+		line-height: 3rem;
+	}
+
+	.contactUs__info .contactUs__infoBox div a {
+		font-size: 2.2rem;
+	}
+
+	.contactUs__hoursBox h3 {
+		margin-bottom: 2.8rem;
+	}
+
+	.contactUs_hours-list {
+		font-size: 2.5rem;
+	}
+
+	.contactUs_hours-list span {
+		text-align: right;
+	}
+}
+
+@media (max-width: 1280px) {
+	.contactUs__info {
+		column-gap: 10rem;
+	}
+}
+
+@media (max-width: 1024px) {
 	.contactUs {
 		padding: 20px;
 		height: auto;
@@ -234,6 +304,10 @@
 		width: 100%;
 	}
 
+	.contactUs__info {
+		column-gap: 40rem;
+	}
+
 	.contactUs__contact {
 		padding: 30px;
 	}
@@ -241,5 +315,33 @@
 	.contactUs__map {
 		padding: 0;
 		min-height: 300px;
+	}
+}
+
+@media (max-width: 900px) {
+	.contactUs__info {
+		column-gap: 30rem;
+	}
+}
+
+@media (max-width: 820px) {
+	.contactUs {
+		height: auto;
+	}
+}
+
+@media (max-width: 600px) {
+	.contactUs {
+		height: fit-content;
+	}
+
+	.contactUs__info {
+		column-gap: 10rem;
+	}
+}
+
+@media (max-width: 384px) {
+	.contactUs__info {
+		column-gap: 5rem;
 	}
 }
