--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -95,25 +95,46 @@
 
 	&__logo {
 		position: absolute;
-		top: 0.5rem;
+		top: 2.5rem;
 		left: 3rem;
 
 		p {
-			font-family: 'Lato', sans-serif;
+			// font-family: "Icklips";
+			font-family: 'HELLO DENVER DISPLAY';
 			font-size: 3.5rem;
-			color: yellow;
-			font-weight: 900;
+			color: #fff;
 			letter-spacing: 0.3rem;
 			text-transform: uppercase;
-			text-align: center;
+			text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff, 0 0 4.2rem #0fa, 0 0 8.2rem #0fa, 0 0 9.2rem #0fa,
+				0 0 10.2rem #0fa, 0 0 15.1rem #0fa;
+			animation: flicker 1.5s infinite alternate;
+		}
+
+		@keyframes flicker {
+			0%,
+			18%,
+			22%,
+			25%,
+			53%,
+			57%,
+			100% {
+				text-shadow: 0 0 0.4rem #fff, 0 0 1.1rem #fff, 0 0 1.9rem #fff, 0 0 4rem #0fa, 0 0 8rem #0fa, 0 0 9rem #0fa,
+					0 0 10rem #0fa, 0 0 15rem #0fa;
+			}
+
+			20%,
+			24%,
+			55% {
+				text-shadow: none;
+			}
 		}
 
 		span {
-			font-family: 'Lato', sans-serif;
-			display: inline-block;
+			font-family: 'Oswald', sans-serif;
 			font-size: 3.5rem;
-			font-weight: 900;
+			font-weight: 500;
 			color: $color-brand-1;
+			text-shadow: none;
 		}
 	}
 
@@ -165,4 +186,33 @@
 	opacity: 1;
 	visibility: visible;
 	transition: all 0.6s 0.4s;
+}
+
+@media (max-width: 420px) {
+	.navbar {
+		&__logo {
+			top: 3.5rem;
+			p {
+				font-size: 2.2rem;
+			}
+
+			span {
+				font-size: 2.2rem;
+			}
+		}
+	}
+}
+
+@media (max-width: 320px) {
+	.navbar {
+		&__logo {
+			p {
+				font-size: 1.8rem;
+			}
+
+			span {
+				font-size: 1.8rem;
+			}
+		}
+	}
 }
