--- a/sass/_offer.scss
+++ b/sass/_offer.scss
@@ -1,8 +1,9 @@
 .section__offer {
 	width: 100%;
 	height: 100vh;
-	display: grid;
-	place-content: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 	position: relative;
 }
 
@@ -18,15 +19,14 @@
 }
 
 .offer {
-	max-width: 170rem;
-	height: 65rem;
+	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 
 	.contentBox {
 		position: relative;
-		width: 38rem;
+		width: 40rem;
 		margin: 1rem 2rem;
 
 		.label {
@@ -63,7 +63,7 @@
 		}
 
 		&.active .content {
-			height: 40rem;
+			min-height: calc(75vh - 30rem);
 			padding: 1rem 1rem;
 		}
 	}
@@ -84,7 +84,7 @@
 
 	.contentBox-2 {
 		.label {
-			background: url('.././images/motor.jpg') no-repeat;
+			background: url('.././images/klimatyzacja.jpg') no-repeat;
 			background-size: cover;
 
 			h3 {
@@ -114,7 +114,7 @@
 
 	.contentBox-4 {
 		.label {
-			background: url('.././images/road-mountain.jpg') no-repeat;
+			background: url('.././images/diagnostyka.jpg') no-repeat;
 			background-size: cover;
 
 			h3 {
@@ -124,6 +124,54 @@
 
 		.content {
 			background: rgba(133, 226, 175, 0.9);
+		}
+	}
+}
+
+@media (max-width: 1800px) {
+	.section__offer {
+		height: 180vh;
+	}
+
+	.offer {
+		height: 100vh;
+
+		.contentBox {
+			width: 64rem;
+		}
+	}
+}
+
+@media (max-width: 900px) {
+	.section__offer {
+		height: 170vh;
+	}
+
+	.offer {
+		.contentBox {
+			.label {
+				height: 35rem;
+			}
+			&.active .content {
+				min-height: calc(40vh - 40rem);
+			}
+		}
+	}
+}
+
+@media (max-width: 384px) {
+	.section__offer {
+		height: 200vh;
+	}
+
+	.offer {
+		.contentBox {
+			.label {
+				height: 25rem;
+			}
+			&.active .content {
+				min-height: calc(50vh - 35rem);
+			}
 		}
 	}
 }
