--- a/sass/_shop.scss
+++ b/sass/_shop.scss
@@ -23,13 +23,13 @@
 			position: relative;
 
 			.card__head {
-				color: black;
+				opacity: 0;
 				padding: 0.5em;
-				transition: transform 0.5s linear;
+				transition: transform 0.5s;
 				min-width: 100%;
-				text-align: center;
+				text-align: start;
 				position: absolute;
-				bottom: -3rem;
+				bottom: -4rem;
 				font-size: 2rem;
 				white-space: nowrap;
 			}
@@ -41,11 +41,12 @@
 				}
 
 				.card__head {
+					opacity: 1;
 					text-align: center;
 					color: white;
 					background: rgba(0, 0, 0, 0.7);
 					font-size: 2rem;
-					transform: translateY(-4rem);
+					transform: translateY(-8rem);
 				}
 			}
 			img {
@@ -83,5 +84,49 @@
 				transform: scale(1.3);
 			}
 		}
+	}
+}
+
+@media (max-width: 1680px) {
+	.shop .shopBox .card .card__head {
+		font-size: 1.8rem;
+	}
+
+	.shop .shopBox .card:hover .card__head {
+		font-size: 1.8rem;
+	}
+}
+
+@media (max-width: 1280px) {
+	.shop .shopBox .card .card__head {
+		font-size: 1.5rem;
+	}
+
+	.shop .shopBox .card:hover .card__head {
+		font-size: 1.5rem;
+	}
+}
+
+@media (max-width: 1024px) {
+	.shop .shopBox .card .card__head {
+	font-size: 1.2rem;
+	}
+
+	.shop .shopBox {
+		margin: 0;
+	}
+
+	.shop .sign {
+		padding: 0;
+	}
+
+	.shop .shopBox .card:hover .card__head {
+		font-size: 1.2rem;
+	}
+}
+
+@media (max-width: 420px) {
+	.shop .shopBox .card:hover .card__head {
+		opacity: 0;
 	}
 }
