--- a/sass/_opinion.scss
+++ b/sass/_opinion.scss
@@ -7,7 +7,7 @@
 			rgba(231, 95, 95, 0.7) 50%,
 			rgba(235, 165, 68, 0.8) 100%
 		),
-		url('.././images/car-mechanic-customer-shaking-hands_Image\ by\ aleksandarlittlewolf\ on\ Freepik.jpg');
+		url('.././images/opinion_bcg.jpg');
 	background-position: center;
 	background-size: cover;
 	overflow: hidden;
