--- a/sass/_aboutUs.scss
+++ b/sass/_aboutUs.scss
@@ -76,10 +76,12 @@
 	}
 }
 
+// Responsive
+
 @media (min-width: 2000px) {
 	.aboutUs {
 		justify-content: space-around;
-		
+
 		&__wrapper {
 			height: 65vh;
 		}
@@ -90,7 +92,7 @@
 	.aboutUs {
 		height: 100vh;
 		justify-content: flex-start;
-		
+
 		&__paragraph {
 			font-size: 1.8rem;
 		}
@@ -130,13 +132,55 @@
 	}
 }
 
+
+
 @media (max-width: 820px) {
 	.aboutUs {
 		height: 90vh;
 
-
 		&__wrapper {
 			height: 35vh;
+		}
+	}
+}
+
+@media (min-width: 800px) and (max-width: 900px) and (orientation: landscape) {
+	.aboutUs {
+		height: 240vh;
+
+		&__box {
+			width: 100%;
+			padding: 0rem 6rem;
+		}
+		
+		&__paragraph {
+			width: 100%;
+		}
+
+		&__wrapper {
+			height: 100vh;
+			width: 100%;
+		}
+	}
+}
+
+
+@media (min-width: 660px) and (max-width: 800px) and (orientation: landscape) {
+	.aboutUs {
+		height: 240vh;
+
+		&__box {
+			width: 100%;
+			padding: 0rem 6rem;
+		}
+		
+		&__paragraph {
+			width: 100%;
+		}
+
+		&__wrapper {
+			height: 100vh;
+			width: 100%;
 		}
 	}
 }
@@ -145,36 +189,65 @@
 	.aboutUs {
 		height: 110vh;
 
-			&__wrapper {
+		&__wrapper {
 			height: 35vh;
 			width: 90%;
 		}
 	}
 }
 
-
 @media (max-width: 420px) {
 	.aboutUs {
 		height: 120vh;
 
-		&__wrapper {
-			height: 25vh;
+		&__box {
+			width: 100%;
+			padding: 0rem 5rem;
 		}
-	}
-}
-
-
-@media (max-width: 320px) {
-	.aboutUs {
-		height: 170vh;
 
 		&__paragraph {
 			width: 100%;
 		}
 
 		&__wrapper {
+			height: 35vh;
 			width: 100%;
-			height: 30vh;
+		}
+	}
+}
+
+
+@media (min-width: 320px) and (max-width: 660px) and (orientation: landscape) {
+	.aboutUs {
+		height: 260vh;
+
+		&__box {
+			width: 100%;
+			padding: 0rem 6rem;
+		}
+
+		&__paragraph {
+			width: 100%;
+		}
+
+		&__wrapper {
+			height: 100vh;
+			width: 100%;
+		}
+	}
+}
+
+@media (max-width: 320px) {
+	.aboutUs {
+		height: 170vh;
+
+		&__box {
+			width: 100%;
+			padding: 0rem 5rem;
+		}
+
+		&__paragraph {
+			width: 100%;
 		}
 	}
 }
