--- a/sass/_contactUs.scss
+++ b/sass/_contactUs.scss
@@ -215,10 +215,10 @@
 @media (min-width: 2560px) {
 	.contactUs {
 		padding: 20px;
-		height: 100vh;
+		height: 92vh;
 	}
 	.contactUs__box {
-		grid-template-rows: repeat(2, 48rem);
+		grid-template-rows: repeat(2, 38rem);
 	}
 
 	.contactUs__row50 {
@@ -227,7 +227,7 @@
 
 	.contactUs__inputBox-title {
 		font-size: 2.5rem;
-		margin: 3rem 0 1rem;
+		margin: 1rem 0 1rem;
 	}
 
 	.contactUs__inputBox input {
@@ -237,20 +237,20 @@
 
 	.contactUs__inputBox textarea {
 		font-size: 2.5rem;
-		min-height: 32rem;
-		margin-bottom: 3rem;
+		min-height: 22rem;
+		margin-bottom: 1.5rem;
 	}
 
 	.contactUs__info .contactUs__infoBox div {
 		display: flex;
 		align-items: center;
-		margin-bottom: 3rem;
+		margin-bottom: 1rem;
 	}
 
 	.contactUs__info .contactUs__infoBox div span {
 		min-width: 5rem;
 		height: 5rem;
-		font-size: 3rem;
+		font-size: 2.2rem;
 		margin-right: 2rem;
 	}
 
@@ -264,11 +264,11 @@
 	}
 
 	.contactUs__hoursBox h3 {
-		margin-bottom: 2.8rem;
+		margin-bottom: 2rem;
 	}
 
 	.contactUs_hours-list {
-		font-size: 2.5rem;
+		font-size: 2.2rem;
 	}
 
 	.contactUs_hours-list span {
@@ -336,12 +336,50 @@
 	}
 
 	.contactUs__info {
-		column-gap: 10rem;
+		column-gap: 18rem;
+	}
+}
+
+@media (max-width: 420px) {
+	.contactUs__contact {
+		padding: 3rem;
+	}
+	.contactUs__info {
+		column-gap: 7rem;
 	}
 }
 
 @media (max-width: 384px) {
+	.contactUs__contact {
+		padding: 2rem;
+	}
 	.contactUs__info {
 		column-gap: 5rem;
+	}
+}
+
+@media (max-width: 320px) {
+	.contactUs__contact {
+		padding: 2rem;
+
+		h3 {
+			font-size: 2.5rem;
+		}
+	}
+	.contactUs__info {
+		column-gap: 4rem;
+		font-size: 1rem;
+	}
+	.contactUs__info .contactUs__infoBox div p {
+		font-size: 1.3rem;
+	}
+	
+	.contactUs__info .contactUs__infoBox div a {
+		font-size: 1.3rem;
+	}
+	
+	.contactUs_hours-list {
+		margin-top:.9rem;
+		font-size: 1.3rem;
 	}
 }
