--- a/sass/_shop.scss
+++ b/sass/_shop.scss
@@ -109,7 +109,7 @@
 
 @media (max-width: 1024px) {
 	.shop .shopBox .card .card__head {
-	font-size: 1.2rem;
+		font-size: 1.2rem;
 	}
 
 	.shop .shopBox {
@@ -122,6 +122,19 @@
 
 	.shop .shopBox .card:hover .card__head {
 		font-size: 1.2rem;
+	}
+}
+
+@media (min-width: 767px) and (max-width: 900px) and (orientation: landscape) {
+	.shop {
+		max-height: 240vh;
+	}
+}
+
+
+@media (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+	.shop {
+		max-height: 300vh;
 	}
 }
 
