--- a/sass/_contactUs.scss
+++ b/sass/_contactUs.scss
@@ -276,7 +276,6 @@
 	}
 }
 
-
 @media (max-width: 1280px) {
 	.contactUs__info {
 		column-gap: 10rem;
@@ -367,19 +366,19 @@
 		}
 	}
 	.contactUs__info {
-		column-gap: 4rem;
+		column-gap: 3rem;
 		font-size: 1rem;
 	}
 	.contactUs__info .contactUs__infoBox div p {
 		font-size: 1.3rem;
 	}
-	
+
 	.contactUs__info .contactUs__infoBox div a {
 		font-size: 1.3rem;
 	}
-	
+
 	.contactUs_hours-list {
-		margin-top:.9rem;
+		margin-top: 0.9rem;
 		font-size: 1.3rem;
 	}
 }
