--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -3,7 +3,6 @@
 	height: 10rem;
 	background-color: rgba(0, 0, 0, 0.85);
 	backdrop-filter: blur(7px);
-	height: 10rem;
 	position: fixed;
 	top: -20rem;
 	z-index: 10;
@@ -202,6 +201,13 @@
 	}
 }
 
+@media (min-width: 320px) and (max-width: 920px) and (orientation: landscape) {
+	.navbar {
+		&__list {
+			gap: 2rem;
+		}
+	}
+}
 
 @media (max-width: 320px) {
 	.navbar {
